<resources>
    <string name="app_name">GIFT VIEW</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_user">NewUserActivity</string>
    <string name="title_activity_find_pwd">FindPwdActivity</string>
    <string name="title_activity_conditions">ConditionsActivity</string>
    <string name="title_activity_app_setting">AppSettingActivity</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="title_activity_change_pwd">ChangePwdActivity</string>
    <string name="title_activity_app_info">AppInfoActivity</string>
    <string name="title_activity_auto_link_setting">AutoLinkSettingActivity</string>
    <string name="title_activity_device">DeviceActivity</string>
    <string name="title_activity_device_enroll">DeviceEnrollActivity</string>
    <string name="title_activity_device_enroll_list">DeviceEnrollListActivity</string>
    <string name="title_activity_detail_info">DetailInfoActivity</string>
    <string name="title_activity_service_conditions">ServiceConditionsActivity</string>
    <string name="title_activity_individual_conditions">IndividualConditionsActivity</string>

    <string name="Setting">설정</string>
    <string name="Setting_String">설정</string>
    <string name="Settings">환경설정</string>
    <string name="AppInfo">앱 정보</string>
    <string name="home">홈</string>
    <string name="Login">로그인</string>
    <string name="PasswordFind">암호 찾기</string>
    <string name="NewUserLogin">회원가입</string>
    <string name="ID">이메일</string>
    <string name="PWD">패스워드</string>
    <string name="PWDc">패스워드 확인</string>
    <string name="PWD_Trans">암호받기</string>
    <string name="ServiceUseConditions">서비스이용약관</string>
    <string name="IndividualInfoDealingPolicy">개인정보취급방침</string>
    <string name="Success">확인</string>
    <string name="Save">저장</string>
    <string name="UserInfo">회원정보</string>
    <string name="Open">열기</string>
    <string name="General">일반</string>
    <string name="AutoLogin">자동로그인</string>
    <string name="AutoDevice">디바이스 자동 연결</string>
    <string name="AutoDeviceSetting">디바이스 자동 연결 설정</string>
    <string name="Device">디바이스</string>
    <string name="AirQuality">공기질</string>
    <string name="AirQualityMeasurement">공기질측정</string>
    <string name="MeasuringCycle">측정주기</string>
    <string name="Weather">날씨</string>
    <string name="WeatherCheck">날씨 확인</string>
    <string name="CheckCycle">확인주기</string>
    <string name="Notifications">알림</string>
    <string name="FirstName">성</string>
    <string name="LastName">이름</string>
    <string name="PwdChange">암호변경</string>
    <string name="thisPwd">현재 암호</string>
    <string name="newPwd">새 암호</string>
    <string name="newPwdc">새 암호 확인</string>
    <string name="Change">변경</string>
    <string name="Close">닫기</string>
    <string name="Check">확인</string>
    <string name="EnrollList">등록 리스트</string>
    <string name="ConnectionCondition">연결상태</string>
    <string name="AutoDeviceConnection">자동연결</string>
    <string name="Enroll">등록</string>
    <string name="DeviceEnroll">디바이스등록</string>
    <string name="UserIdDelete">회원탈퇴</string>
    <string name="DeviceName">디바이스 이름</string>
    <string name="MacAddress">맥 어드레스</string>
    <string name="EnrollNumber">등록 번호</string>
    <string name="DeviceEnrollList">디바이스 등록 리스트</string>
    <string name="EnrollDeviceList">등록된 디바이스 리스트</string>
    <string name="DetailInfo">상세정보</string>
    <string name="DeviceSetting">기기 설정</string>
    <string name="Good">좋음</string>
    <string name="Normal">보통</string>
    <string name="Bad">나쁨</string>
    <string name="VeryBad">매우나쁨</string>
    <string name="DeviceEnrollDelete">등록 해제</string>
    <string name="DeviceConnect">디바이스 연결</string>
    <string name="falseemailString">틀린 이메일입니다</string>
    <string name="falsenetworkString">네트워크 오류</string>
    <string name="falseunknownString">알수없는 오류</string>
    <string name="notemailString">존재하지 않는 이메일입니다</string>
    <string name="falsepwdString">틀린 비밀번호 입니다</string>
    <string name="notidpwdString">아이디가 또는 패스워드가 입력되어 있지 않습니다</string>
    <string name="pwdlongString">패스워드가 4자리 보다 작거나 20자리를 넘어갔습니다.</string>
    <string name="loadingString">확인중입니다. 잠시만 기다려주세요</string>
    <string name="Logout">로그아웃</string>
    <string name="Forwarding">전송중...</string>
    <string name="inputmailString">이메일을 입력해주세요</string>
    <string name="inputpwdString">비밀번호를 입력해주세요</string>
    <string name="inputpwddoubleString">비밀번호를 한번더 입력해주세요</string>
    <string name="emailcheckString">이메일 확인 되었습니다</string>
    <string name="pwdfalseString">비밀번호가 다릅니다</string>
    <string name="bluetoothproString">블루투스를 켜주세요</string>
    <string name="ble_not_supported">배터리 부족으로 블루투스 검색 실패</string>
    <string name="scan">검색</string>
    <string name="cancel">검색 취소</string>
    <string name="paired">연결</string>
    <string name="device">디바이스 :</string>
    <string name="no_device">&lt;디바이스 리스트&gt;</string>
    <string name="select_device">디바이스 리스트</string>
    <string name="scanning">근처 디바이스 검색</string>
    <string name="not_available">블루투스를 사용할수 없는 기종입니다</string>
    <string name="UNKNOWN">알수없음</string>
    <string name="Measurement">측정</string>

    <string-array name="item_ids">
        <item>온도</item>
        <item>배터리</item>
    </string-array>

    <string name="hello_world">Hello world!</string>

</resources>
