<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button"
            android:layout_below="@+id/appbar">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/ID"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/mail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:inputType="textVisiblePassword"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="@string/PWD"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/pwd"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:inputType="textPassword"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:text="@string/PWDc"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/pwdc"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:inputType="textPassword"
                    android:singleLine="true" />

                <Button
                    android:id="@+id/serviceCond"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ServiceUseConditions" />

                <Button
                    android:id="@+id/IndividualCond"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/IndividualInfoDealingPolicy" />

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/NewUserLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/darkblue"
            android:text="@string/NewUserLogin"
            android:textColor="#FFFFFF" />

    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>
